--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -134,5 +134,29 @@
     "chineseDragon": "Dragão",
     "chineseSnake": "Serpente",
     "chineseHorse": "Cavalo",
-    "chineseGoat": "Cabra"
+    "chineseGoat": "Cabra",
+    "detailedTime": "Tempo Detalhado",
+    "simpleTime": "Tempo Simples",
+    "showAge": "Mostrar Idade",
+    "hideAge": "Ocultar Idade",
+    "customize": "Personalizar",
+    "showInfo": "Mostrar Informações",
+    "hideInfo": "Ocultar Informações",
+    "resetAll": "Redefinir Tudo",
+    "generationBeta": "Geração Beta",
+    "generationAlpha": "Geração Alfa",
+    "generationZ": "Geração Z",
+    "generationMillennial": "Geração Millennial",
+    "generationX": "Geração X",
+    "generationBabyBoomer": "Geração Baby Boomer",
+    "generationSilent": "Geração Silenciosa",
+    "upgradeToPremium": "Atualizar para Premium",
+    "removeWatermark": "Remover Marca d'água",
+    "removeWatermarkDescription": "Compartilhe suas fotos sem a marca d'água do Birthdate Plus",
+    "highQualityExport": "Exportação em Alta Qualidade",
+    "highQualityExportDescription": "Exporte suas fotos na mais alta qualidade para compartilhamento perfeito",
+    "adFreeExperience": "Experiência sem Anúncios",
+    "adFreeExperienceDescription": "Desfrute de uma interface limpa, sem distrações",
+    "upgradeNowWithPrice": "Atualizar Agora - R$14,90",
+    "restorePurchases": "Restaurar Compras"
 } 
