--- a/lib/l10n/app_ko.arb
+++ b/lib/l10n/app_ko.arb
@@ -141,5 +141,22 @@
     "generationMillennial": "밀레니얼 세대",
     "generationX": "X세대",
     "generationBabyBoomer": "베이비붐 세대",
-    "generationSilent": "침묵 세대"
+    "generationSilent": "침묵 세대",
+    "detailedTime": "상세 시간",
+    "simpleTime": "간단한 시간",
+    "showAge": "나이 표시",
+    "hideAge": "나이 숨기기",
+    "customize": "사용자 지정",
+    "showInfo": "정보 표시",
+    "hideInfo": "정보 숨기기",
+    "resetAll": "모두 초기화",
+    "upgradeToPremium": "프리미엄으로 업그레이드",
+    "removeWatermark": "워터마크 제거",
+    "removeWatermarkDescription": "Birthdate Plus 워터마크 없이 사진 공유",
+    "highQualityExport": "고품질 내보내기",
+    "highQualityExportDescription": "완벽한 공유를 위한 최고 품질의 사진 내보내기",
+    "adFreeExperience": "광고 없는 경험",
+    "adFreeExperienceDescription": "깔끔하고 방해 없는 인터페이스",
+    "upgradeNowWithPrice": "지금 업그레이드 - ₩3,900",
+    "restorePurchases": "구매 복원"
 } 
